Logtalk/examples/errors/usesrepeated.lgt

:-object(usesrepeated).

	:- uses(list, [member/2]).
	:- uses(set, [member/2]).

:- end_object.
